# solar_site_selector

./: .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  Procfile  QUICK_DEPLOY.md  RAILWAY_DEPLOY.md  README.md  VERCEL_FRONTEND_DEPLOY.md  api_server.py  deploy.sh  export_graph_diagram.py  graph_diagram.mmd  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  sql_agent.py  start_api.sh  test_api.py  test_backend.sh  utils.py  vercel.json
api/: index.py  main.py
backend/: api_server.py  sql_agent.py
backend/db_actions/: populate_tables.py
backend/processing/: environmental_data_processor.py
backend/prompts/: text_to_sql_prompts.py
backend/sql/: geographic_features.sql  infrastructure_features.sql  parcels.sql
backend/tests/: site_filtering_queries.py
db_actions/: create_db.py  db_utils.py  populate_tables.py  repopulate_database.sh
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/: index.css
frontend/src/components/: AvailableFeaturesModal.tsx  ChatInterface.tsx  MapView.tsx  OnboardingModal.tsx  ParcelsList.tsx
frontend/src/pages/: Index.tsx
frontend/supabase/: config.toml
frontend/supabase/functions/solar-parcel-search/: index.ts
processing/: admin_boundaries_processor.py  environmental_data_processor.py  omf_data_processor.py  parcel_processor.py
prompts/: text_to_sql_prompts.py
serverless_api/: main.py
sql/: geographic_features.sql  infrastructure_features.sql  parcels.sql
tests/: query_tester.py  site_filtering_queries.py
