[project]
name = "solar-deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.27",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    "pandas>=2.3.0",
    "pdfminer.six>=20221105",
    "pymupdf>=1.26.1",
    "pymupdf4llm>=0.0.27",
    "unstructured[pdf]>=0.18.15",
    "unstructured-inference>=0.7.0",
    "pi_heif>=0.16.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "docling>=2.55.1",
    "playwright>=1.55.0",
    "duckdb>=1.4.1",
    "geopandas>=1.1.1",
    "folium>=0.20.0",
    "pyarrow>=22.0.0",
    "mercantile>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "geoalchemy2>=0.18.0",
    "fiona>=1.10.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "shapely>=2.0.0",
    "graphviz>=0.21",
]
